fix image tag typo

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -343,7 +343,8 @@ jobs:
       run: |
         set -euo pipefail
         IMG="${IMAGE_NAME}"
-        docker tag "$IMG:${COMMIT_TAG}" "$IMG:${COMMIT_TAG}"
+        docker tag "$IMG:${COMMIT_TAG}" "$IMG:commit-latest"
+        docker push "$IMG:commit-latest"
         docker push "$IMG:${COMMIT_TAG}"
 
     - name: Push quiz terminal image (commit tag)
@@ -352,7 +353,8 @@ jobs:
       run: |
         set -euo pipefail
         IMG="${TERMINAL_IMAGE}"
-        docker tag "$IMG:${COMMIT_TAG}" "$IMG:${COMMIT_TAG}"
+        docker tag "$IMG:${COMMIT_TAG}" "$IMG:commit-latest"
+        docker push "$IMG:commit-latest"
         docker push "$IMG:${COMMIT_TAG}"
 
   deploy-production:
