--- a/k8s/quiz.yaml
+++ b/k8s/quiz.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
         - name: quiz
-          image: dremer10/quiz-terminal:commit-<sha>
+          image: dremer10/quiz-terminal:commit-latest
           imagePullPolicy: Always
         ports:
         - containerPort: 7681
