--- a/k8s/testing.yaml
+++ b/k8s/testing.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: pub-site
-        image: dremer10/pub-site:commit-<sha>
+        image: dremer10/pub-site:commit-latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
