--- a/k8s-1.35-manifests/gatewayclass-ngf.yaml
+++ b/k8s-1.35-manifests/gatewayclass-ngf.yaml
@@ -1,6 +1,6 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
-  name: nginx-gateway
+  name: nginx
 spec:
   controllerName: gateway.nginx.org/nginx-gateway-controller
