--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -11,6 +11,7 @@ on:
 
 permissions:
   contents: write  # needed to push git tags
+  pull-requests: read  # needed to resolve PR head for image promotion
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site
@@ -47,16 +48,31 @@ jobs:
 
     - name: Determine source commit tag for promotion
       id: source
-      run: |
-        set -euo pipefail
-        source_sha="${GITHUB_SHA}"
-        if [ "${GITHUB_REF_NAME}" = "main" ]; then
-          if git rev-parse HEAD^2 >/dev/null 2>&1; then
-            source_sha="$(git rev-parse HEAD^2)"
-          fi
-        fi
-        short="${source_sha::7}"
-        echo "source_commit_tag=commit-${short}" >> "$GITHUB_OUTPUT"
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const sha = process.env.GITHUB_SHA;
+          let sourceSha = sha;
+
+          if (process.env.GITHUB_REF_NAME === 'main' && process.env.GITHUB_EVENT_NAME === 'push') {
+            try {
+              const { data: prs } = await github.rest.repos.listPullRequestsAssociatedWithCommit({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                commit_sha: sha,
+                per_page: 10,
+              });
+              const match = prs.find(pr => pr.merge_commit_sha === sha) || prs[0];
+              if (match?.head?.sha) {
+                sourceSha = match.head.sha;
+              }
+            } catch (error) {
+              core.warning(`PR lookup failed, falling back to ${sha}: ${error.message}`);
+            }
+          }
+
+          const short = sourceSha.substring(0, 7);
+          core.setOutput('source_commit_tag', `commit-${short}`);
 
     - name: Determine build version
       id: version
