--- a/k8s-1.35-manifests/quiz.yaml
+++ b/k8s-1.35-manifests/quiz.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: quiz
-        image: dremer10/quiz-terminal:commit-latest
+        image: dremer10/quiz-terminal:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 7681
