--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -388,6 +388,7 @@ jobs:
           kubectl apply -f "$MANIFEST_BASE/certificates.yaml"
           kubectl apply -f "$MANIFEST_BASE/production.yaml"
           kubectl apply -f "$MANIFEST_BASE/quiz.yaml"
+          kubectl -n pub-site-prod set env deployment/pub-site APP_VERSION=${{ needs.build.outputs.version }}
           kubectl -n quiz set image deployment/quiz quiz=${{ env.TERMINAL_IMAGE }}:${{ needs.build.outputs.version }}
           kubectl -n quiz rollout status deployment/quiz --timeout=5m
           kubectl -n pub-site-prod set image deployment/pub-site pub-site=${{ env.IMAGE_NAME }}:${{ needs.build.outputs.version }}
@@ -417,6 +418,7 @@ jobs:
           kubectl apply -f "$MANIFEST_BASE/certificates.yaml"
           kubectl apply -f "$MANIFEST_BASE/testing.yaml"
           kubectl apply -f "$MANIFEST_BASE/quiz.yaml"
+          kubectl -n pub-site-dev set env deployment/pub-site APP_VERSION=${{ needs.build.outputs.commit_tag }}
           kubectl -n quiz set image deployment/quiz quiz=${{ env.TERMINAL_IMAGE }}:${{ needs.build.outputs.commit_tag }}
           kubectl -n quiz rollout status deployment/quiz --timeout=5m
           kubectl -n pub-site-dev set image deployment/pub-site pub-site=${{ env.IMAGE_NAME }}:${{ needs.build.outputs.commit_tag }}
