--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -259,7 +259,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.IMAGE_NAME }}:${IMAGE_TAG}
+        image-ref: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH'
@@ -273,7 +273,7 @@ jobs:
     - name: Run Trivy vulnerability scanner (table output)
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.IMAGE_NAME }}:${IMAGE_TAG}
+        image-ref: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         format: 'table'
         exit-code: '1'
         ignore-unfixed: true
