--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -12,6 +12,7 @@ on:
 permissions:
   contents: write  # needed to push git tags
   pull-requests: read  # needed to resolve PR head for image promotion
+  security-events: write  # needed to upload SARIF results
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site
@@ -266,7 +267,7 @@ jobs:
 
     - name: Upload Trivy results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v4
-      if: always()
+      if: always() && hashFiles('trivy-results.sarif') != ''
       with:
         sarif_file: 'trivy-results.sarif'
 
