--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -8,6 +8,8 @@ name: Build and Deploy
 on:
   push:
     branches: [ "**" ]  # Trigger on push to any branch
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: write  # needed to push git tags
