--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy
 # Workflow Behavior:
 # - Feature branch push: Fast deploy to info-dev (no tests)
 # - PR to main: Test + Scan gate via pr-tests.yml (no deployment)
-# - Main push: Deploy to production (tests/scans already passed in PR)
+# - Main push: Test + Scan gate + deploy to production
 
 on:
   push:
@@ -187,21 +187,20 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     env:
-      IMAGE_TAG: ${{ needs.build.outputs.commit_tag }}
+      IMAGE_TAG: ${{ needs.build.outputs.source_commit_tag }}
 
     steps:
-    - name: Download Docker image artifact
-      uses: actions/download-artifact@v4
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
       with:
-        name: pub-site-image
-        path: /tmp
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Load Docker image
+    - name: Pull promoted image
       run: |
-        docker load --input /tmp/image.tar
-        docker image ls -a
+        docker pull "${IMAGE_NAME}:${IMAGE_TAG}"
 
     - name: Test Docker image
       run: |
@@ -245,14 +244,13 @@ jobs:
   scan:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     env:
       IMAGE_TAG: ${{ needs.build.outputs.source_commit_tag }}
 
     steps:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -281,7 +279,7 @@ jobs:
         severity: 'CRITICAL,HIGH'
 
   push-production:
-    needs: build
+    needs: [build, test, scan]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
