--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,7 +1,7 @@
 name: Build and Deploy
 
 # Workflow Behavior:
-# - Feature branch push: Fast deploy to info-dev (no tests)
+# - Feature branch push: Fast deploy to staging (no tests)
 # - PR to main: Test + Scan gate via pr-tests.yml (no deployment)
 # - Main push: Test + Scan gate + deploy to production
 
@@ -15,13 +15,14 @@ permissions:
   security-events: write  # needed to upload SARIF results
 
 env:
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site
-  VITE_QUIZ_TERMINAL_URL: ${{ secrets.VITE_QUIZ_TERMINAL_URL }}
-  TERMINAL_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/quiz-terminal
+  IMAGE_NAME: ${{ vars.DOCKERHUB_USERNAME }}/pub-site
+  VITE_QUIZ_TERMINAL_URL: ${{ vars.VITE_QUIZ_TERMINAL_URL }}
+  TERMINAL_IMAGE: ${{ vars.DOCKERHUB_USERNAME }}/quiz-terminal
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: ${{ github.ref == 'refs/heads/main' && 'production' || 'staging' }}
     outputs:
       version: ${{ steps.version.outputs.version }}
       create_tag: ${{ steps.version.outputs.create_tag }}
@@ -188,6 +189,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment: production
     env:
       IMAGE_TAG: ${{ needs.build.outputs.source_commit_tag }}
 
@@ -195,7 +197,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Pull promoted image
@@ -245,6 +247,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment: production
     env:
       IMAGE_TAG: ${{ needs.build.outputs.source_commit_tag }}
 
@@ -252,7 +255,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Run Trivy vulnerability scanner
@@ -282,6 +285,7 @@ jobs:
     needs: [build, test, scan]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment: production
 
     steps:
     - name: Checkout code
@@ -292,7 +296,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Create git tag for release
@@ -346,10 +350,11 @@ jobs:
         docker push "$IMG:${VERSION}"
         docker push "$IMG:latest"
 
-  push-testing:
+  push-staging:
     needs: build
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'
+    environment: staging
 
     steps:
     - name: Checkout code
@@ -358,7 +363,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Download Docker image artifact (pub-site)
@@ -402,83 +407,95 @@ jobs:
     needs: [push-production, build]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment: production
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Deploy to Hostinger k8s (production)
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        username: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_SSH_KEY }}
-        port: 33001
-        script: |
-          set -euo pipefail
-          RAW_BASE="https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref_name }}"
-          MANIFEST_BASE="$RAW_BASE/k8s-1.35-manifests"
-          kubectl apply -f "$MANIFEST_BASE/global-gateway.yaml"
-          kubectl apply -f "$MANIFEST_BASE/certificates.yaml"
-          export PUB_SITE_IMAGE_TAG="${{ needs.build.outputs.version }}"
-          tmp_prod="$(mktemp)"
-          curl -fsSL "$MANIFEST_BASE/production.yaml" -o "$tmp_prod"
-          envsubst < "$tmp_prod" | kubectl apply -f -
-          rm -f "$tmp_prod"
-          if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
-            export QUIZ_IMAGE_TAG="${{ needs.build.outputs.version }}"
-            tmp_quiz="$(mktemp)"
-            curl -fsSL "$MANIFEST_BASE/quiz.yaml" -o "$tmp_quiz"
-            envsubst < "$tmp_quiz" | kubectl apply -f -
-            rm -f "$tmp_quiz"
-          fi
-          kubectl -n pub-site-prod set env deployment/pub-site APP_VERSION=${{ needs.build.outputs.version }}
-          if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
-            kubectl -n quiz rollout status deployment/quiz --timeout=5m
-          fi
-          kubectl -n pub-site-prod rollout status deployment/pub-site --timeout=5m
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v4
 
-  deploy-testing:
-    needs: [push-testing, build]
+    - name: Configure kubeconfig
+      run: |
+        set -euo pipefail
+        mkdir -p "$RUNNER_TEMP/kube"
+        printf '%s' "${{ secrets.KUBE_CONFIG_B64 }}" | base64 --decode > "$RUNNER_TEMP/kube/config"
+        chmod 600 "$RUNNER_TEMP/kube/config"
+        echo "KUBECONFIG=$RUNNER_TEMP/kube/config" >> "$GITHUB_ENV"
+
+    - name: Deploy to Kubernetes (production)
+      run: |
+        set -euo pipefail
+        RAW_BASE="https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref_name }}"
+        MANIFEST_BASE="$RAW_BASE/k8s-1.35-manifests"
+        kubectl apply -f "$MANIFEST_BASE/global-gateway.yaml"
+        kubectl apply -f "$MANIFEST_BASE/certificates.yaml"
+        export PUB_SITE_IMAGE_TAG="${{ needs.build.outputs.version }}"
+        tmp_prod="$(mktemp)"
+        curl -fsSL "$MANIFEST_BASE/production.yaml" -o "$tmp_prod"
+        envsubst < "$tmp_prod" | kubectl apply -f -
+        rm -f "$tmp_prod"
+        if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
+          export QUIZ_IMAGE_TAG="${{ needs.build.outputs.version }}"
+          tmp_quiz="$(mktemp)"
+          curl -fsSL "$MANIFEST_BASE/quiz.yaml" -o "$tmp_quiz"
+          envsubst < "$tmp_quiz" | kubectl apply -f -
+          rm -f "$tmp_quiz"
+        fi
+        kubectl -n pub-site-prod set env deployment/pub-site APP_VERSION=${{ needs.build.outputs.version }}
+        if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
+          kubectl -n quiz rollout status deployment/quiz --timeout=5m
+        fi
+        kubectl -n pub-site-prod rollout status deployment/pub-site --timeout=5m
+
+  deploy-staging:
+    needs: [push-staging, build]
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'
+    environment: staging
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Deploy to Hostinger k8s (testing)
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        username: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_SSH_KEY }}
-        port: 33001
-        script: |
-          set -euo pipefail
-          RAW_BASE="https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref_name }}"
-          MANIFEST_BASE="$RAW_BASE/k8s-1.35-manifests"
-          kubectl apply -f "$MANIFEST_BASE/global-gateway.yaml"
-          kubectl apply -f "$MANIFEST_BASE/certificates.yaml"
-          export PUB_SITE_IMAGE_TAG="${{ needs.build.outputs.commit_tag }}"
-          tmp_test="$(mktemp)"
-          curl -fsSL "$MANIFEST_BASE/testing.yaml" -o "$tmp_test"
-          envsubst < "$tmp_test" | kubectl apply -f -
-          rm -f "$tmp_test"
-          if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
-            export QUIZ_IMAGE_TAG="${{ needs.build.outputs.commit_tag }}"
-            tmp_quiz="$(mktemp)"
-            curl -fsSL "$MANIFEST_BASE/quiz.yaml" -o "$tmp_quiz"
-            envsubst < "$tmp_quiz" | kubectl apply -f -
-            rm -f "$tmp_quiz"
-          fi
-          kubectl -n pub-site-dev set env deployment/pub-site APP_VERSION=${{ needs.build.outputs.commit_tag }}
-          if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
-            kubectl -n quiz rollout status deployment/quiz --timeout=5m
-          fi
-          kubectl -n pub-site-dev rollout status deployment/pub-site --timeout=5m
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v4
 
-    - name: Comment PR with testing URL
+    - name: Configure kubeconfig
+      run: |
+        set -euo pipefail
+        mkdir -p "$RUNNER_TEMP/kube"
+        printf '%s' "${{ secrets.KUBE_CONFIG_B64 }}" | base64 --decode > "$RUNNER_TEMP/kube/config"
+        chmod 600 "$RUNNER_TEMP/kube/config"
+        echo "KUBECONFIG=$RUNNER_TEMP/kube/config" >> "$GITHUB_ENV"
+
+    - name: Deploy to Kubernetes (staging)
+      run: |
+        set -euo pipefail
+        RAW_BASE="https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref_name }}"
+        MANIFEST_BASE="$RAW_BASE/k8s-1.35-manifests"
+        kubectl apply -f "$MANIFEST_BASE/global-gateway.yaml"
+        kubectl apply -f "$MANIFEST_BASE/certificates.yaml"
+        export PUB_SITE_IMAGE_TAG="${{ needs.build.outputs.commit_tag }}"
+        tmp_test="$(mktemp)"
+        curl -fsSL "$MANIFEST_BASE/testing.yaml" -o "$tmp_test"
+        envsubst < "$tmp_test" | kubectl apply -f -
+        rm -f "$tmp_test"
+        if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
+          export QUIZ_IMAGE_TAG="${{ needs.build.outputs.commit_tag }}"
+          tmp_quiz="$(mktemp)"
+          curl -fsSL "$MANIFEST_BASE/quiz.yaml" -o "$tmp_quiz"
+          envsubst < "$tmp_quiz" | kubectl apply -f -
+          rm -f "$tmp_quiz"
+        fi
+        kubectl -n pub-site-dev set env deployment/pub-site APP_VERSION=${{ needs.build.outputs.commit_tag }}
+        if [ "${{ needs.build.outputs.quiz_changed }}" = "true" ]; then
+          kubectl -n quiz rollout status deployment/quiz --timeout=5m
+        fi
+        kubectl -n pub-site-dev rollout status deployment/pub-site --timeout=5m
+
+    - name: Comment PR with staging URL
       uses: actions/github-script@v7
       if: github.event_name == 'pull_request'
       with:
@@ -487,5 +504,5 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: '✅ Testing deployment successful!\n\n🔗 Preview your changes at: https://info-dev.dremer10.com\n\nThe testing environment will remain active until this PR is merged or closed.'
+            body: '✅ Staging deployment successful!\n\n🔗 Preview your changes at: https://info-dev.dremer10.com\n\nThe staging environment will remain active until this PR is merged or closed.'
           })
